1.2/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
      type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: backend
          image: PROJECT/todoapp
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - name: shared-image
              mountPath: /shared
