1.2/manifests/backend-todos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-todos
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-todos
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend-todos
    spec:
      containers:
        - name: backend-todos
          image: PROJECT/backend-todos
          ports:
            - containerPort: 3001
