1.2/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: PROJECT/todoappfrontend
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: frontend-config-volume
              mountPath: /app/dist/config.js
              subPath: config.js
      volumes:
        - name: frontend-config-volume
          configMap:
            name: frontend-config
