1.2/manifests/postgres-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: project
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresApp
  template:
    metadata:
      labels:
        app: postgresApp
    spec:
      containers:
        - name: postgres-db
          image: postgres:13-trixie
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: initdb
          configMap:
            name: postgres-init-sql

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
  labels:
    app: postgresApp
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgresApp
